# pandas_tutorial

./: Dockerfile  my_commands.md  pyproject.toml
src/: main.py
src/data/: titanic.xlsx
